Moje upozorneni a soubory - dynamika obsahu + Zlepseni kvality kodu JS + kosmeticke upravy DB

--- a/src-front/templates/aplikacni-vrstva/prehled.html
+++ b/src-front/templates/aplikacni-vrstva/prehled.html
@@ -953,6 +953,7 @@
     </p>
 </footer>
 
-<script src="/js/application/header-control.js"></script>
+<script src="/js/classes/HeaderController.js"></script>
+<script src="/js/application/layout.js"></script>
 </body>
 </html>
