--- a/src-front/templates/prezentacni-vrstva/uvod.html
+++ b/src-front/templates/prezentacni-vrstva/uvod.html
@@ -163,6 +163,7 @@
     </p>
 </footer>
 
-<script src="js/presentation/animations.js"></script>
+<script src="/js/classes/PresentationAnimationsController.js"></script>
+<script src="js/presentation/home.js"></script>
 </body>
 </html>
