--- a/src/views/Application/summary.latte
+++ b/src/views/Application/summary.latte
@@ -675,5 +675,7 @@
 {/block}
 
 {block js}
-<script src="js/application/summary-control.js"></script>
+<script src="/js/classes/WeekChanger.js"></script>
+<script src="/js/classes/SummaryController.js"></script>
+<script src="/js/application/summary.js"></script>
 {/block}
