--- a/src/views/Presentation/home.latte
+++ b/src/views/Presentation/home.latte
@@ -125,4 +125,7 @@
 </section>
 {/block}
 
-{block js}<script src="/js/presentation/animations.js"></script>{/block}
+{block js}
+<script src="/js/classes/PresentationAnimationsController.js"></script>
+<script src="/js/presentation/home.js"></script>
+{/block}
