Sdilena upozorneni a poznamky - dynamicke nacitani obsahu

--- a/src/views/Application/#layout.latte
+++ b/src/views/Application/#layout.latte
@@ -60,7 +60,7 @@
                 <a class="menu-link" href="/application/reminders-and-notes/private">Moje upozornění a poznámky</a>
             </li>
             <li n:class="menu-item, $contentView === 'shared-reminders-and-notes.latte' ? active">
-                <a class="menu-link" href="/application/reminders-and-notes/shared">Sdílené upozornění a poznámky</a>
+                <a class="menu-link" href="/application/reminders-and-notes/shared">Sdílená upozornění a poznámky</a>
             </li>
             <li n:class="menu-item, $contentView === 'private-files.latte' ? active">
                 <a class="menu-link" href="/application/files/private">Moje soubory</a>
