Skryti upozorneni (a s tim souvisejiciho obsahu) pro uzivatele bez tridy

--- a/src-front/less/pages/_summary.less
+++ b/src-front/less/pages/_summary.less
@@ -1,6 +1,7 @@
 // START kalendar
 .calendar-section {
   padding: 0 @page-side-p;
+  margin-bottom: @page-top-bottom-p;
 
   .calendar {
     overflow-x: auto;
@@ -76,7 +77,6 @@
 
 // START muj obsah
 .my-content-section {
-  margin-top: @page-top-bottom-p;
   background: @middle-grey;
   padding: @content-section-p @page-side-p;
 
